woodoku/jibaek-woodoku-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jibaek-woodoku-app-service
spec:
  type: NodePort
  selector:
    app: jibaek-woodoku-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
